# agent-memory-service

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
bench/: costmodel.py  loadtest.py
data/: generate_sessions.py
data/sessions/: interactions.jsonl
eval/: queries.jsonl  results.json  results.md  run_eval.py
eval/locomo/: __init__.py  adapter.py  loader.py  metrics.py  results.json  results.md  run_locomo.py
scripts/: demo.py  deploy_cloudrun.sh
serve/: __init__.py  app.py  backend.py  embeddings_vertex.py
src/agent_memory/: __init__.py  audit.py  config.py  consolidation.py  embeddings.py  extractor.py  pag.py  retention.py  scoring.py  service.py  stores.py  types.py  vector_index.py
tests/: test_index.py  test_locomo_metrics.py  test_memory.py  test_pag.py  test_serve.py
