[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-service"
version = "0.1.0"
description = "Typed, provenance-tracked memory service for LLM agents (working/episodic/semantic/procedural) with consolidation, supersession, and audit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "sentence-transformers>=2.7,<4",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
dev = ["pytest>=8", "ruff>=0.6", "nltk>=3.8", "fastapi>=0.110", "httpx>=0.27", "uvicorn>=0.29"]
locomo = ["nltk>=3.8", "anthropic>=0.39"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
vertex = ["google-cloud-aiplatform>=1.60"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
